# macli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: workflow.yml
src/: app.rs  config.rs  lib.rs  main.rs  manghwa.rs  search.rs  ui.rs
ui/: window.slint
