[package]
name = "macli"
version = "0.1.0"
edition = "2021"

[dependencies]
home = "0.5.9"
inquire = "0.7.5"
open = "5.3.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["float_roundtrip"] }
slint = "1.6.0"
tl = "0.7.8"
tokio = { version="1.38.0", features=["full"]}

[build-dependencies]
slint-build = "1.6.0"
