[package]
name = "macli"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
gio = "0.20.0"
gtk4 = { version = "0.9.0", features = ["v4_14"] }
home = "0.5.9"
indicatif = "0.17.8"
inquire = "0.7.5"
open = "5.3.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json", "stream"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["float_roundtrip"] }
tl = "0.7.8"
tokio = { version="1.38.0", features=["full"]}
